--- a/.github/workflows/task-2.yaml
+++ b/.github/workflows/task-2.yaml
@@ -3,6 +3,7 @@ run-name: Runing Tests for desktop-app  🚀
 on:
   pull_request:
     types: [opened]
+  push:
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
@@ -10,5 +11,5 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: cd ${{ github.workspace }}/dekstop-app/
+      - run: cd ./dekstop-app/
       - run: ls
