--- a/.github/workflows/task-2.yaml
+++ b/.github/workflows/task-2.yaml
@@ -11,5 +11,4 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: cd ./dekstop-app/
-      - run: ls
+      - run: cd ./desktop-app/ && npm ci && npm test
