--- a/.github/workflows/task-4.yaml
+++ b/.github/workflows/task-4.yaml
@@ -13,3 +13,8 @@ jobs:
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: cd ./desktop-app/ && npm ci && npm test
       - run: cd  ./desktop-app/ && xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run e2e
+      - name: Archive test screenshots artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: screenshots
+          path: desktop-app/test-results/**/**.png
