--- a/.github/workflows/task-4.yaml
+++ b/.github/workflows/task-4.yaml
@@ -14,6 +14,7 @@ jobs:
       - run: cd ./desktop-app/ && npm ci && npm test
       - run: cd  ./desktop-app/ && xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run e2e
       - name: Archive test screenshots artifacts
+        if: ${{ failure() }}
         uses: actions/upload-artifact@v4
         with:
           name: screenshots
